# Wastewater-Controller

./: .gitignore  .gitmodules  Makefile  README.md  sdkconfig  sdkconfig.old
cloud_controller/: dockerfile  makefile  wwc_controller
cloud_controller/main/: wwc_controller.py
main/: Kconfig.projbuild  component.mk  subscribe_publish_sample.c
main/certs/: README.md
wwc_android/: .gitignore  AndroidManifest.xml  README.md  build.gradle
wwc_android/gradle/wrapper/: gradle-wrapper.properties
wwc_android/res/layout/: activity_main.xml
wwc_android/res/raw/: awsconfiguration.json
wwc_android/res/values/: strings.xml
wwc_android/src/pl/leszek_wojcik/wwc/android/: WWCAndroid.java  wwc_android.java
wwc_device/: CMakeLists.txt  Makefile  debug.cfg  debug.sh  esp-idf  esp-idf-extract-library  esp-idf-make  esp-idf-make-flash  esp-idf-make-monitor  sdkconfig.old
wwc_device/components/aws_iot/: CMakeLists.txt
wwc_device/main/: ADCService.cpp  ADCService.h  ActiveObject.cpp  ActiveObject.h  CMakeLists.txt  Kconfig.projbuild  LEDService.cpp  LEDService.h  MethodRequest.h  component.mk  createActiveObjects.cpp  main.cpp  mqtt.cpp  mqtt.h  mqttfsm.cpp  mqttfsm.h  subscribe_publish_sample.c  topics.h  wifi.cpp  wifi.h  wwc.cpp  wwc.h
